# tcc

./: .gitignore  database.db  pyproject.toml
fast_api/: app.py  models.py  schemas.py  security.py  settings.py
fast_api/routers/: acoes.py  auth.py  despesas.py  receitas.py  uo.py  users.py
fast_zero/: app.py  models.py  schemas.py  security.py
fast_zero/routers/: auth.py  clinical_examination.py  clinical_history.py  complementary_exams.py  patients.py  physiotherapy_diagnosis.py  prognosis.py  treatment_plan.py  users.py
migrations/: env.py
migrations/versions/: 37b9e0cd6aef_adicionando_tabela_despesas_3.py  3b558a63d02f_create_complementary_exams_tables.py  5415c0d1086e_create_treatment_plan_table.py  56b5a563e1ce_adicionando_tabela_despesas_2.py  6864f1de9bf2_create_patients_table.py  902acecef906_update_tables.py  9cfdc28bdff5_create_base_login.py  a52cdca00eaf_create_users_table.py  a63727eaa9ca_create_prognosis_tables.py  aa257488d6bd_adicionando_tabela_ação.py  aba9c4cfd5ca_create_complementary_exams_tables.py  ad04ca5730fd_adicionando_tabela_despesas_salvar_.py  b4bc821294c3_create_clinical_examinations_table.py  b567784e5bd3_reinício.py  babb6ea36ba2_create_clinical_histories_table.py  ccd068e80bf7_create_uos_table.py  (+1 more)
tests/: conftest.py  test_acao.py  test_app.py  test_auth.py  test_clinical_examination.py  test_clinical_history.py  test_complementary_exam.py  test_db.py  test_despesa.py  test_patient.py  test_physiotherapy_diagnosis.py  test_prognosis.py  test_receita.py  test_security.py  test_treatment_plan.py  test_uo.py  test_users.py
